<resources>
    <string name="app_name">WMS</string>
    <string name="title_activity_tab">tab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_success">Login Successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_error">Login Error</string>
    <string name="login_progress">Logging in...</string>
    <string name="logging_in">Logging in...</string>
    <string name="login_error_empty_fields">Please fill in all fields</string>
    <string name="loading">Loading...</string>
    <string name="login_as_employee">Login as Employee</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="login_error_invalid_email">Invalid email</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="forget_password_title">Forgot Password</string>
    <string name="forget_password_instructions">Enter your email address below to receive a password reset link.</string>
    <string name="reset_password_button_text">Reset Password</string>
    <string name="reset_password_success">Password reset email sent successfully!</string>
    <string name="reset_password_error">Failed to send password reset email: </string>
    <string name="reset_password_error_invalid_email">Please enter a valid email address.</string>
    <string name="reset_password_error_empty_email">Email field cannot be empty.</string>
    <string name="reset_password_error_not_found">No account found with this email.</string>
    <string name="reset_password_error_network">Network error. Please try again later.</string>
    <string name="close">Close</string>
    <string name="no_account_sign_up">Sign up</string>

    <string name="back_button_desc">Back</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_toggle_desc">Toggle password visibility</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button_text">Login</string>
    <string name="signup_title">Sign Up</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="signup_success">Signup Successful!</string>
    <string name="signup_error">Signup Failed: </string>
    <string name="signup_error_invalid_email">Please enter a valid email address.</string>
    <string name="signup_error_empty_fields">This field cannot be empty.</string>
    <string name="signup_error_password_length">Password must be at least 8 characters.</string>
    <string name="signup_error_password_mismatch">Passwords do not match.</string>
    <string-array name="my_list">
        <item>Select type of complaint</item>
        <item>Wrong Billing</item>
        <item>Wrong/Incomplete Name</item>
        <item>Leakage at meter</item>
    </string-array>

    <string-array name="my_category">
        <item>Select category of complaint</item>
        <item>Billing Complaint</item>
        <item>Customer Services</item>
        <item>Distribution(New Connection)</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_error_invalid_credentials">Invalid email or password.</string>
    <string name="enter_consumer_number">Enter Consumer Number</string>
    <string name="search">Search</string>
</resources>